fix: z-index (#668)

--- a/packages/shared/styles/components/SfProductCard.scss
+++ b/packages/shared/styles/components/SfProductCard.scss
@@ -12,7 +12,6 @@ $product-card__pictures-height-desktop: 250px !default;
   $this: &;
   position: relative;
   box-sizing: border-box;
-  z-index: 0;
   max-width: $product-card-max-width;
   padding: $product-card-padding;
   background-color: $c-white;
@@ -91,7 +90,6 @@ $product-card__pictures-height-desktop: 250px !default;
     @media (min-width: $desktop-min) {
       position: absolute;
       cursor: pointer;
-      z-index: 1;
       transform: translateY(-50%);
       right: 1rem;
       opacity: 0;
@@ -120,7 +118,6 @@ $product-card__pictures-height-desktop: 250px !default;
     position: absolute;
     top: $product-card-padding * 4;
     right: $product-card-padding * 4;
-    z-index: 10;
     padding: 0;
     border: 0;
     background-color: transparent;
